# CGPA-Calculator

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
src/: Calc.cpp  Calc.h  Frame.cpp  Frame.h  Main.cpp
